@@ -97,6 +97,7 @@ export(oxfordWeather)
 export(partitionAddresses)
 export(partitionFatalities)
 export(partitionRoadEndpoints)
+export(partitionRoads)
 export(pdfPartitionRoadEndpoints)
 export(pearsonResiduals)
 export(pointIndex)
